# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sitemaps"
version = "0.1.0"
edition = "2021"

[lib]
path = "./lib.rs"

[features]
xml = ["dep:quick-xml"]
extension = []

[dependencies]
url = { version = "2.3.1" }
quick-xml = { version = "0.27.1", optional = true }
time = { version = "0.3.17", features = ["parsing", "formatting"] }
timext = { path = "../timext", features = ["parsing", "formatting"] }
