# https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "sitemaps"
version = "0.1.0"
edition = "2021"

[lib]
path = "./lib.rs"

[features]
txt = []
xml = ["dep:quick-xml", "dep:time", "dep:timext"]
extension = ["dep:isolang"]

[dependencies]
url = { version = "2.3.1" }
quick-xml = { version = "0.27.1", optional = true }
time = { version = "0.3.17", optional = true, features = ["parsing", "formatting"] }
timext = { path = "../timext", optional = true, features = ["parsing", "formatting"] }
isolang = { version = "2.2.0", optional = true, features = ["default"] }
